--- a/watertransport/src/main/res/values/strings.xml
+++ b/watertransport/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">水路通</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">请输入手机号</string>
+    <string name="prompt_email">请输入用户名或手机号</string>
     <string name="prompt_password">请输入密码</string>
     <string name="action_sign_in">登录</string>
     <string name="action_register">注册</string>
